WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133039
[iOS][WK2] Fix some state reset on crash on WKWebView
https://bugs.webkit.org/show_bug.cgi?id=133039
Summary
[iOS][WK2] Fix some state reset on crash on WKWebView
Benjamin Poulain
Reported
2014-05-17 18:55:27 PDT
[iOS][WK2] Fix some state reset on crash on the WKWebView/WKContentView
Attachments
Patch
(5.46 KB, patch)
2014-05-17 19:10 PDT
,
Benjamin Poulain
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-05-17 19:10:59 PDT
Created
attachment 231644
[details]
Patch
Benjamin Poulain
Comment 2
2014-05-25 17:05:19 PDT
Committed
r169326
: <
http://trac.webkit.org/changeset/169326
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug